--- a/Food-Delivery-BackEnd/Food-Delivery-BackEnd/Food-Delivery-BackEnd/appsettings.json
+++ b/Food-Delivery-BackEnd/Food-Delivery-BackEnd/Food-Delivery-BackEnd/appsettings.json
@@ -12,5 +12,10 @@
   "JwtSettings": {
     "Secret": "YourSecretKey",
     "ExpirationMinutes": 60 // Example, adjust accordingly  
+  },
+  "Jwt": {
+    "Key": "YourSuperSecretKey",
+    "Issuer": "YourIssuer",
+    "Audience": "YourAudience"
   }
 }
