--- a/Food-Delivery-BackEnd/Food-Delivery-BackEnd/Food-Delivery-BackEnd.Core/Food-Delivery-BackEnd.Core.csproj
+++ b/Food-Delivery-BackEnd/Food-Delivery-BackEnd/Food-Delivery-BackEnd.Core/Food-Delivery-BackEnd.Core.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="FluentValidation" Version="11.10.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.10" />
     <PackageReference Include="NetTopologySuite" Version="2.5.0" />
+    <PackageReference Include="Stripe.net" Version="47.0.0" />
   </ItemGroup>
 
   <ItemGroup>
